--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="icones">
                 <a href="" class="icone" id="lampada"></a>
-                <a href="pages/notification/notification.html" class="icone" id="sino"></a>
+                <a href="/notificacoes" class="icone" id="sino"></a>
                 <button id="authButton" class="auth-btn"></button>
                 <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
